<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/source_header">

        <EditTextPreference
            app:key="source_name"
            app:title="@string/source_name"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="source_url"
            app:title="@string/source_url"
            app:useSimpleSummaryProvider="true" />


        <ListPreference
            app:key="source_playlist"
            app:title="@string/source_playlist"
            app:useSimpleSummaryProvider="true" />


        <SwitchPreferenceCompat
            app:key="source_auto_create_playlist"
            app:title="@string/source_auto_create_playlist"
            app:summaryOff="@string/source_auto_create_playlist_summary_off"
            app:summaryOn="@string/source_auto_create_playlist_summary_on"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/source_advance">


        <CheckBoxPreference
            android:defaultValue="false"
            android:key="source_proxy_on"
            android:title="@string/source_proxy_on" />

        <EditTextPreference
            app:key="source_proxy_url"
            app:title="@string/source_proxy_url"
            android:summary="@string/source_proxy_url_summary"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

</PreferenceScreen>